Learning of 15th August

--- a/02_LangChain_Inputs_and_Outputs/code.ipynb
+++ b/02_LangChain_Inputs_and_Outputs/code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,53 +38,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_30164\\2810639211.py:4: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  llm(\"Tell me a joke\")\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'\\nWhy did the tomato turn red?\\n\\nBecause it saw the salad dressing!'"
+       "'<|channel|>analysis<|message|>The user says \"Tell me a joke\". We need to comply with policy. It\\'s a request for content that is allowed. There\\'s no disallowed content. So we can provide a joke. Just give a short, clean joke. Ensure it\\'s not hateful or harassing. It\\'s fine.\\n\\nWe should respond with a joke. No policy issues.<|end|><|start|>assistant<|channel|>final<|message|>Why don’t scientists trust atoms?  \\n\\nBecause they make up everything!'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# OpenAI is a TextCompletion model\n",
+    "# Whereas ChatOpenAI is a chat model\n",
+    "import os\n",
     "from langchain_openai import OpenAI\n",
+    "from pydantic import SecretStr\n",
     "\n",
-    "llm = OpenAI()\n",
-    "llm(\"Tell me a joke\")"
+    "llm = OpenAI(\n",
+    "  base_url=os.getenv(\"API_URL\", \"\"),\n",
+    "  api_key=SecretStr(os.getenv(\"API_KEY\", \"\")),\n",
+    "  model=os.getenv(\"MODEL\", \"\"),\n",
+    "  temperature=0\n",
+    ")\n",
+    "llm.invoke(\"Tell me a joke\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\n\\nWhy don't scientists trust atoms? \\n\\nBecause they make up everything.\""
+       "'<|channel|>analysis<|message|>The user says \"Tell me a joke\". We need to comply with policy. It\\'s a request for content that is allowed. There\\'s no disallowed content. So we can provide a joke. Just give a short, clean joke. Ensure it\\'s not hateful or harassing. It\\'s fine.\\n\\nWe should respond with a joke. No policy issues.<|end|><|start|>assistant<|channel|>final<|message|>Why don’t scientists trust atoms?  \\n\\nBecause they make up everything!'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm(\"Tell me a joke\")"
+    "llm.invoke(\"Tell me a joke\")"
    ]
   },
   {
@@ -116,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "generations=[[Generation(text='\\n\\nWhy did the cow cross the road?\\n\\nTo get to the udder side!', generation_info={'finish_reason': 'stop', 'logprobs': None})], [Generation(text='\\n\\nWhy did the parrot wear a raincoat?\\n\\nBecause he wanted to be polly-proof!', generation_info={'finish_reason': 'stop', 'logprobs': None})]] llm_output={'token_usage': {'completion_tokens': 38, 'prompt_tokens': 13, 'total_tokens': 51}, 'model_name': 'gpt-3.5-turbo-instruct'} run=[RunInfo(run_id=UUID('9c1c3f25-4b16-4231-9ad7-491b7992a13f')), RunInfo(run_id=UUID('396c42c9-ec90-48c8-aa28-2fe2fade98f3'))] type='LLMResult'\n"
+      "generations=[[Generation(text='<|channel|>analysis<|message|>The user wants two jokes: one about cows and one about parrots. They want \"tell me a joke about cows\" and \"tell me a joke about parrots\". So we need to provide a joke for each. The user didn\\'t specify any constraints beyond that. We should produce short, humorous jokes.\\n\\nWe must ensure the content is appropriate. Jokes about animals are fine. Provide two separate jokes. Possibly format them as bullet points or separate lines. Keep it concise and clear. No disallowed content. It\\'s straightforward.\\n\\nWe can do something like:\\n\\n- Cow joke: \"Why did the cow go to space? Because it wanted to see the Milky Way!\"\\n\\n- Parrot joke: \"What does a parrot say when it\\'s tired? \\'Polly-gone!\\'\"\\n\\nBut we need to be careful with jokes that might be offensive. These are fine.\\n\\nWe can also do:\\n\\nCow: \"Why did the cow cross the road? To get to the udder side.\"\\n\\nParrot: \"Why don\\'t parrots like to play cards? Because they always talk about their \\'bird\\' deals.\" Eh.\\n\\nBetter to keep them simple and punny.\\n\\nLet\\'s produce two jokes.<|end|><|start|>assistant<|channel|>final<|message|>**Cow joke:**  \\nWhy did', generation_info={'finish_reason': 'length', 'logprobs': None})], []] llm_output={'token_usage': {'total_tokens': 333, 'prompt_tokens': 83, 'completion_tokens': 250}, 'model_name': 'unsloth/gpt-oss-20b'} run=[RunInfo(run_id=UUID('2a26961f-9b47-43a5-b6c7-c86c6cbbb52d')), RunInfo(run_id=UUID('73122a26-515d-403b-816e-cd3c964c713a'))] type='LLMResult'\n"
      ]
     }
    ],
@@ -134,19 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'token_usage': {'completion_tokens': 38,\n",
-       "  'prompt_tokens': 13,\n",
-       "  'total_tokens': 51},\n",
-       " 'model_name': 'gpt-3.5-turbo-instruct'}"
+       "{'token_usage': {'total_tokens': 333,\n",
+       "  'prompt_tokens': 83,\n",
+       "  'completion_tokens': 250},\n",
+       " 'model_name': 'unsloth/gpt-oss-20b'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,25 +165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+    "llm = ChatOpenAI(\n",
+    "  base_url=os.getenv(\"API_URL\", \"\"),\n",
+    "  api_key=SecretStr(os.getenv(\"API_KEY\", \"\")),\n",
+    "  model=os.getenv(\"MODEL\", \"\"),\n",
+    "  temperature=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Why do cows have hooves instead of feet?\\n\\nBecause they lactose! 🐄😂' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 19, 'prompt_tokens': 13, 'total_tokens': 32, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEh141sPYGx987EKgel7IHsrixIGp', 'finish_reason': 'stop', 'logprobs': None} id='run-d4122228-9f37-4fee-81d9-5e28e15d763d-0' usage_metadata={'input_tokens': 13, 'output_tokens': 19, 'total_tokens': 32, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "content='Sure, here’s one for you:\\n\\n**Why don’t cows ever get lost?**\\n\\nBecause they always follow the *moo*ving directions! 🐄😄' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 76, 'prompt_tokens': 73, 'total_tokens': 149, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'unsloth/gpt-oss-20b', 'system_fingerprint': 'unsloth/gpt-oss-20b', 'id': 'chatcmpl-fddg23cxnmdattu509dmr', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None} id='run--5f00b388-d011-402b-8c90-996cb7e47849-0' usage_metadata={'input_tokens': 73, 'output_tokens': 76, 'total_tokens': 149, 'input_token_details': {}, 'output_token_details': {}}\n"
      ]
     }
    ],
@@ -193,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,16 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"Yes, BellaVista Italian Restaurant typically includes vegan options on their menu. These may include dishes like vegan pasta, salads, and pizza with plant-based toppings. It's always a good idea to check with the restaurant for the most current vegan selections and any special modifications that can be made.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 57, 'prompt_tokens': 61, 'total_tokens': 118, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEh15usEgC8xYPo3l25nTtHVvIKJJ', 'finish_reason': 'stop', 'logprobs': None}, id='run-52782c41-d3bb-497c-bf1e-57d8173bd12b-0', usage_metadata={'input_tokens': 61, 'output_tokens': 57, 'total_tokens': 118, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='Yes! BellaVista has several plant‑based options you can enjoy:\\n\\n| Dish | Description |\\n|------|-------------|\\n| **Vegan Margherita Pizza** | Classic tomato sauce, fresh basil, and a dairy‑free cheese blend (or no cheese at all). |\\n| **Pasta Primavera** | Whole‑grain spaghetti tossed with seasonal veggies, garlic, olive oil, and a sprinkle of nutritional yeast for a cheesy flavor. |\\n| **Vegan Mushroom Risotto** | Creamy arborio rice cooked in vegetable broth with sautéed mushrooms, onions, and fresh herbs. |\\n| **Caesar Salad (vegan)** | Crisp romaine, homemade croutons, lemon‑olive oil dressing, and a drizzle of tahini for the “cheese” flavor. |\\n| **Bruschetta Trio** | Classic tomato & basil, roasted red pepper, or sautéed spinach with garlic – all served on toasted ciabatta. |\\n\\nIf you have any dietary restrictions or want to double‑check ingredients (e.g., hidden dairy in sauces), just let the server know—they’re happy to accommodate and can suggest additional vegan-friendly sides like roasted vegetables or a fresh fruit plate.\\n\\nEnjoy your meal!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 350, 'prompt_tokens': 126, 'total_tokens': 476, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'unsloth/gpt-oss-20b', 'system_fingerprint': 'unsloth/gpt-oss-20b', 'id': 'chatcmpl-u6pjo0ovnuds81xteqf2o', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--a85bbcaf-d875-4ad4-bfed-696d5ab36e4c-0', usage_metadata={'input_tokens': 126, 'output_tokens': 350, 'total_tokens': 476, 'input_token_details': {}, 'output_token_details': {}})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LLMResult(generations=[[ChatGeneration(text='Haben Sie vegane Optionen?', generation_info={'finish_reason': 'stop', 'logprobs': None}, message=AIMessage(content='Haben Sie vegane Optionen?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 27, 'total_tokens': 35, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEh16jGwoThTKrtyA2gnc47LVUb0X', 'finish_reason': 'stop', 'logprobs': None}, id='run-3f321225-1572-46dd-8cbd-ac12244225c1-0', usage_metadata={'input_tokens': 27, 'output_tokens': 8, 'total_tokens': 35, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}))], [ChatGeneration(text='¿Tienen opciones veganas?', generation_info={'finish_reason': 'stop', 'logprobs': None}, message=AIMessage(content='¿Tienen opciones veganas?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 29, 'total_tokens': 37, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_e4fa3702df', 'id': 'chatcmpl-BEh16ECNZ6jq3TjU0N8HrqM1bmQOj', 'finish_reason': 'stop', 'logprobs': None}, id='run-2f64a891-4caa-4432-be7e-5f3721bbd5ea-0', usage_metadata={'input_tokens': 29, 'output_tokens': 8, 'total_tokens': 37, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}))]], llm_output={'token_usage': {'completion_tokens': 16, 'prompt_tokens': 56, 'total_tokens': 72, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini', 'system_fingerprint': 'fp_b8bc95a0ac'}, run=[RunInfo(run_id=UUID('3f321225-1572-46dd-8cbd-ac12244225c1')), RunInfo(run_id=UUID('2f64a891-4caa-4432-be7e-5f3721bbd5ea'))], type='LLMResult')"
+       "LLMResult(generations=[[ChatGeneration(text='\"Gibt es vegane Optionen?\"', generation_info={'finish_reason': 'stop', 'logprobs': None}, message=AIMessage(content='\"Gibt es vegane Optionen?\"', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1407, 'prompt_tokens': 90, 'total_tokens': 1497, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'unsloth/gpt-oss-20b', 'system_fingerprint': 'unsloth/gpt-oss-20b', 'id': 'chatcmpl-os47mwor1x7rqbvcadmx6', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--6109f5cc-3bb0-44cb-8858-8cea8e1c9af8-0', usage_metadata={'input_tokens': 90, 'output_tokens': 1407, 'total_tokens': 1497, 'input_token_details': {}, 'output_token_details': {}}))], [ChatGeneration(text='¿Tienes opciones veganas?', generation_info={'finish_reason': 'stop', 'logprobs': None}, message=AIMessage(content='¿Tienes opciones veganas?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 127, 'prompt_tokens': 92, 'total_tokens': 219, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'unsloth/gpt-oss-20b', 'system_fingerprint': 'unsloth/gpt-oss-20b', 'id': 'chatcmpl-lopr0liowx4q62nf354rq', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--f176c360-97d5-418a-a838-cddda37ca7c8-0', usage_metadata={'input_tokens': 92, 'output_tokens': 127, 'total_tokens': 219, 'input_token_details': {}, 'output_token_details': {}}))]], llm_output={'token_usage': {'completion_tokens': 1534, 'prompt_tokens': 182, 'total_tokens': 1716}, 'model_name': 'unsloth/gpt-oss-20b', 'system_fingerprint': 'unsloth/gpt-oss-20b'}, run=[RunInfo(run_id=UUID('6109f5cc-3bb0-44cb-8858-8cea8e1c9af8')), RunInfo(run_id=UUID('f176c360-97d5-418a-a838-cddda37ca7c8'))], type='LLMResult')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Haben Sie vegane Optionen?', '¿Tienen opciones veganas?']"
+       "['\"Gibt es vegane Optionen?\"', '¿Tienes opciones veganas?']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
