--- a/03_Prompt_Templates/code.ipynb
+++ b/03_Prompt_Templates/code.ipynb
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nYou are a helpful assistant that translates the english to german\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.prompts.prompt import PromptTemplate\n",
     "\n",
@@ -56,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nYou are a helpful assistant that translates the english to german\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt_template = PromptTemplate(template=TEMPLATE, input_variables=[\"input_language\", \"output_language\"])\n",
     "prompt_template.format(input_language=\"english\", output_language=\"german\")\n"
@@ -73,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Public\\Documents\\Wondershare\\CreatorTemp\\ipykernel_16084\\2598461317.py:43: LangChainDeprecationWarning: This class is deprecated in favor of chaining individual prompts together.\n",
+      "  pipeline_prompt = PipelinePromptTemplate(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "from langchain.prompts.prompt import PromptTemplate\n",
@@ -337,16 +379,53 @@
     "    (\"example\", example_prompt),\n",
     "    (\"execution\", execution_prompt)\n",
     "]\n",
-    "pipeline_prompt = PipelinePromptTemplate(final_prompt=full_prompt, pipeline_prompts=input_prompts)\n",
+    "\n",
+    "# The union of variables from example_prompt and execution_prompt\n",
+    "pipeline_prompt = PipelinePromptTemplate(\n",
+    "    final_prompt=full_prompt,\n",
+    "    pipeline_prompts=input_prompts, #type: ignore\n",
+    "    input_variables=[\n",
+    "        \"example_text\",\n",
+    "        \"example_subject\",\n",
+    "        \"example_evaluation\",\n",
+    "        \"example_sentiment\",\n",
+    "        \"example_format\",\n",
+    "        \"input\"\n",
+    "    ]\n",
+    ")\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Interprete the text and evaluate the text. Determine if the text has a positive, neutral, or negative sentiment. Also, identify the subject of the text in one word.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Chain-of-Thought Prompts:\n",
+      "Let's start by evaluating a statement. Consider: \"The BellaVista restaurant offers an exquisite dining experience. The flavors are rich and the presentation is impeccable.\". How does this make you feel about BellaVista?\n",
+      "Response: It sounds like a positive review for BellaVista.\n",
+      "\n",
+      "Based on the positive nature of that statement, how would you format your response?\n",
+      "Response: { \"sentiment\": \"positive\", \"subject\": \"BellaVista\" }\n",
+      "\n",
+      "\n",
+      "\n",
+      "Now, execute this process for the text: \"The new restaurant downtown has bland dishes and the wait time is too long.\".\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(pipeline_prompt.format(\n",
     "    example_text=\"The BellaVista restaurant offers an exquisite dining experience. The flavors are rich and the presentation is impeccable.\",\n",
@@ -362,6 +441,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The below example is without Pipeline prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Interpret the text and evaluate the text. Determine if the text has a positive, neutral, or negative sentiment. Also, identify the subject of the text in one word.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Chain-of-Thought Prompts:\n",
+      "Let's start by evaluating a statement. Consider: \"I love sunny days\". How does this make you feel about weather?\n",
+      "Response: It makes me feel happy\n",
+      "\n",
+      "Based on the positive nature of that statement, how would you format your response?\n",
+      "Response: a cheerful reply\n",
+      "\n",
+      "\n",
+      "\n",
+      "Now, execute this process for the text: \"The movie was breathtaking\".\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "\n",
+    "# Step 1: Introduction\n",
+    "introduction_prompt = PromptTemplate.from_template(\"\"\"\n",
+    "Interpret the text and evaluate the text. Determine if the text has a positive, neutral, or negative sentiment. Also, identify the subject of the text in one word.\n",
+    "\"\"\")\n",
+    "\n",
+    "# Step 2: Example\n",
+    "example_prompt = PromptTemplate.from_template(\"\"\"\n",
+    "Chain-of-Thought Prompts:\n",
+    "Let's start by evaluating a statement. Consider: \"{example_text}\". How does this make you feel about {example_subject}?\n",
+    "Response: {example_evaluation}\n",
+    "\n",
+    "Based on the {example_sentiment} nature of that statement, how would you format your response?\n",
+    "Response: {example_format}\n",
+    "\"\"\")\n",
+    "\n",
+    "# Step 3: Execution\n",
+    "execution_prompt = PromptTemplate.from_template(\"\"\"\n",
+    "Now, execute this process for the text: \"{input}\".\n",
+    "\"\"\")\n",
+    "\n",
+    "# Example input data\n",
+    "variables = {\n",
+    "    \"example_text\": \"I love sunny days\",\n",
+    "    \"example_subject\": \"weather\",\n",
+    "    \"example_evaluation\": \"It makes me feel happy\",\n",
+    "    \"example_sentiment\": \"positive\",\n",
+    "    \"example_format\": \"a cheerful reply\",\n",
+    "    \"input\": \"The movie was breathtaking\"\n",
+    "}\n",
+    "\n",
+    "# Sequential composition\n",
+    "intro_text = introduction_prompt.format()\n",
+    "example_text = example_prompt.format(**variables)\n",
+    "execution_text = execution_prompt.format(**variables)\n",
+    "\n",
+    "# Final prompt composition\n",
+    "full_prompt = f\"\"\"{intro_text}\n",
+    "\n",
+    "{example_text}\n",
+    "\n",
+    "{execution_text}\"\"\"\n",
+    "\n",
+    "print(full_prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Serializing prompts\n",
     "\n",
     "Example is an easy prompt since serializing does not work for the **PipelinePromptTemplate** (yet)"
@@ -369,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,9 +542,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tell me a joke about chickens'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.prompts import load_prompt\n",
     "\n",
@@ -392,9 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tell me a joke about cows'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt = load_prompt(\"prompt.json\")\n",
     "prompt.format(input=\"cows\")"
@@ -403,7 +587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
