--- a/04_Chains/basics_and_outputerparsers.ipynb
+++ b/04_Chains/basics_and_outputerparsers.ipynb
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,19 +55,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Public\\Documents\\Wondershare\\CreatorTemp\\ipykernel_16588\\621871601.py:15: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  chain = LLMChain(llm=llm, prompt=prompt_template)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'I ordered pizza salami from the restaurant Bellavista. It was ok, but the dough could have been a bit more crisp.',\n",
+       " 'text': '{\\n  \"sentiment\": \"neutral\",\\n  \"subject\": \"pizza\",\\n  \"price\": \"None\"\\n}'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import os\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.chains.llm import LLMChain\n",
+    "from pydantic import SecretStr\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+    "llm = ChatOpenAI( \n",
+    "  model=os.getenv(\"MODEL\", \"\"),\n",
+    "  base_url=os.getenv(\"API_URL\", \"\"),\n",
+    "  api_key=SecretStr(os.getenv(\"API_KEY\", \"\")),\n",
+    "  temperature=0\n",
+    ")\n",
     "\n",
     "prompt_template = ChatPromptTemplate.from_template(template=TEMPLATE)\n",
     "chain = LLMChain(llm=llm, prompt=prompt_template)\n",
-    "chain.invoke(input=\"I ordered pizza salami from the restaurant Bellavista. It was ok, but the dough could have been a bit more crisp.\")"
+    "chain.invoke(input={\"input\": \"I ordered pizza salami from the restaurant Bellavista. It was ok, but the dough could have been a bit more crisp.\"})"
    ]
   },
   {
@@ -70,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ResponseSchema(name='sentiment', description='is the text in a positive, neutral or negative sentiment? Sentiment is required.', type='string'), ResponseSchema(name='subject', description='What subject is the text about? Use exactly one word. Use None if no price was provided.', type='string'), ResponseSchema(name='price', description='How much did the customer pay? Use None if no price was provided.', type='float')]\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.output_parsers import ResponseSchema, StructuredOutputParser\n",
     "\n",
@@ -86,9 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"sentiment\": string  // is the text in a positive, neutral or negative sentiment? Sentiment is required.\n",
+      "\t\"subject\": string  // What subject is the text about? Use exactly one word. Use None if no price was provided.\n",
+      "\t\"price\": float  // How much did the customer pay? Use None if no price was provided.\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
     "format_instructions = parser.get_format_instructions()\n",
@@ -97,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\n",
+      "\t\"sentiment\": \"neutral\",\n",
+      "\t\"subject\": \"pizza\",\n",
+      "\t\"price\": null\n",
+      "}\n",
+      "```\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "_input = prompt.format_prompt(input=\"I ordered pizza salami from the restaurant Bellavista. It was ok, but the dough could have been a bit more crisp.\")\n",
     "output = llm.invoke(_input.to_messages())\n",
@@ -133,19 +210,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sentiment': 'neutral', 'subject': 'pizza', 'price': None}\n"
+     ]
+    }
+   ],
    "source": [
-    "json_output = parser.parse(output.content)\n",
+    "json_output = parser.parse(str(output.content))\n",
     "print(json_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'neutral'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "json_output.get(\"sentiment\")"
    ]
@@ -153,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
